division pedido y cocina

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
     "staging": "burger-queen-52e1b",
-    "default": "burger-queen-52e1b"
+    "default": "pruebaangularfirebase-4e7f7"
   }
 }
